@@ -30,6 +30,9 @@ ECL 0.9l-p1:
 	     for i from 0
 	     do (format t "~&~@<;;; ~@;Message #~D~%~A~:>" i m)))
 
+ - In windows, ECL recognizes the environment variables HOMEDRIVE and HOMEPATH
+   and uses them to construct the output of user-homedir-pathname.
+
 * Bugs fixed:
 
  - The optimizer for COERCE might enter an infinite loop for certain
